Added StepDetail Activity. The working version is yet to implement

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
                 android:value=".MainActivity"/>
         </activity>
 
+        <activity android:name=".StepDetailActivity" />
+
     </application>
 
 </manifest>
