Fixed StepDetailFragment to show TextView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,11 @@
                 android:value=".MainActivity"/>
         </activity>
 
-        <activity android:name=".StepDetailActivity" />
+        <activity android:name=".StepDetailActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".DetailActivity"/>
+        </activity>
 
     </application>
 
